# src/main/java/com/booleanuk/api/Customer.java
@@ -1,0 +1,46 @@
+package com.booleanuk.api;
+
+public class Customer {
+    private long id;
+    private String name;
+    private String address;
+    private String email;
+    private String phoneNumber;
+
+    public Customer(long id, String name, String address, String email, String phoneNumber) {
+        this.id = id;
+        this.name = name;
+        this.address = address;
+        this.email = email;
+        this.phoneNumber = phoneNumber;
+    }
+
+    public String toString() {
+        String result = "";
+        result += this.id + " - ";
+        result += this.name + " - ";
+        result += this.address;
+        return result;
+    }
+
+
+    public String getName() {
+        return name;
+    }
+
+    public String getAddress() {
+        return address;
+    }
+
+    public String getEmail() {
+        return email;
+    }
+
+    public String getPhoneNumber() {
+        return phoneNumber;
+    }
+
+    public void setId(long id) {
+        this.id = id;
+    }
+}
